--- a/public/app.html
+++ b/public/app.html
@@ -2,6 +2,7 @@
 <head>
 
   <title>Materialize CSS Framework Demo</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
